[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemy/character_0016.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/character_0015.png" type="Texture" id=2]
[ext_resource path="res://scenes/Enemy.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 5 )

[sub_resource type="CapsuleShape2D" id=4]
height = 16.0

[sub_resource type="CircleShape2D" id=5]
radius = 9.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )
startDirection = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9 )
frames = SubResource( 1 )
animation = "run"
playing = true
offset = Vector2( 0, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="GoalDetector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalDetector"]
position = Vector2( 0, -7 )
shape = SubResource( 3 )

[node name="HazardArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
position = Vector2( 0, -6 )
scale = Vector2( 0.6, 0.35 )
shape = SubResource( 4 )

[node name="HitBoxArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea"]
position = Vector2( 0, -9 )
shape = SubResource( 5 )

[connection signal="area_entered" from="HitBoxArea" to="." method="_on_HitBoxArea_area_entered"]
